updated css for button colors focus state on overflow

--- a/overflow.html
+++ b/overflow.html
@@ -87,16 +87,20 @@
           background-color: var(--overflow-kraft);
         }
 
-        .btn.bg-blue:hover {
+        .btn.bg-blue:hover,
+        .btn.bg-blue:focus {
           background-color: var(--overflow-blue);
         }
-        .btn.bg-blue-light:hover {
+        .btn.bg-blue-light:hover,
+        .btn.bg-blue-light:focus {
           background-color: var(--overflow-blue-light);
         }
-        .btn.bg-blue-dark:hover {
+        .btn.bg-blue-dark:hover,
+        .btn.bg-blue-dark:focus {
           background-color: var(--overflow-blue-dark);
         }
-        .btn.bg-kraft:hover {
+        .btn.bg-kraft:hover,
+        .btn.bg-kraft:focus {
           background-color: var(--overflow-kraft);
         }
 
