updated box shadows on stories to all come from same direction

--- a/overflow.html
+++ b/overflow.html
@@ -221,14 +221,14 @@
             <h3 class="h5 text-blue mb-5"><span class="display-1 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
             <p>Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!</p>
             <p>
-              <a href="#stories" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Read the Aiken Story</a>
-              <a href="#give" class="btn btn-default" data-scroll>Give Now</a>
+              <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
+              <a href="#stories" class="btn btn-default" data-scroll>Read the Aiken Story</a>
             </p>
           </div>
         </div>
 
         <div
-          class="ratio-landscape ratio-lg-thin bg-white background-cover background-top"
+          class="ratio-landscape ratio-lg-thin bg-white background-cover background-top mt-6 mt-md-8"
           style="background-image: url('./Themes/new/Assets/Images/overflow_aikenariel_2x1.jpg')"></div>
       </section>
 
@@ -325,7 +325,7 @@
         </div>
 
         <!-- STORIES -->
-        <div class="d-grid grid-cols-1 gap-y-6 gap-y-md-9">
+        <div class="d-grid grid-cols-1 gap-y-6 gap-y-md-8">
           <div id="storyone" class="d-grid grid-cols-12 gap-y-4 gap-y-sm-6 gap-x-md-6 gap-x-xl-7">
             <div class="ratio-square col-span-11 col-span-md-6 col-span-xl-4" data-aos="fade-right">
               <div
@@ -353,7 +353,7 @@
                 class="ratio-square rounded-2x rounded-r-0 background-cover background-center"
                 style="
                   background-image: url('https://images.unsplash.com/photo-1594743794748-b6b721775767?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3174&q=80');
-                  box-shadow: -20px 20px 0px var(--overflow-blue);
+                  box-shadow: 20px 20px 0px var(--overflow-blue);
                 "></div>
             </div>
             <div class="col-span-12 col-span-md-6 col-span-xl-5 d-flex align-items-center ltr" data-aos="fade-right">
@@ -388,6 +388,10 @@
               </div>
             </div>
           </div>
+
+          <p class="text-center">
+            <a href="#give" class="btn btn-primary bg-blue">Give Now</a>
+          </p>
         </div>
       </section>
 
