--- a/overflow.html
+++ b/overflow.html
@@ -358,7 +358,7 @@
             </div>
             <div class="col-span-12 col-span-md-6 col-span-xl-5 d-flex align-items-center ltr" data-aos="fade-right">
               <div class="p-4 p-md-6 py-md-0">
-                <h3 class="text-white">“Nostrud sunt aliquip est occaecat ullamco eiusmod anim ea exercitation dolor.</h3>
+                <h3 class="text-white">“Nostrud sunt aliquip est occaecat ullamco eiusmod anim ea exercitation.</h3>
                 <p>
                   Incididunt dolor ullamco nulla minim laborum ea deserunt cupidatat sit cupidatat do commodo excepteur esse. Enim qui ex laborum commodo
                   pariatur laboris Lorem qui ut.”
