increased aiken image height on overflow on mobile

--- a/overflow.html
+++ b/overflow.html
@@ -228,7 +228,7 @@
         </div>
 
         <div
-          class="ratio-landscape ratio-lg-thin bg-white background-cover background-top mt-6 mt-md-8"
+          class="ratio-video ratio-sm-landscape ratio-lg-thin bg-white background-cover background-top mt-6 mt-md-8"
           style="background-image: url('./Themes/new/Assets/Images/overflow_aikenariel_2x1.jpg')"></div>
       </section>
 
