updated copy on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -147,7 +147,7 @@
       </style>
 
       <section class="bg-blue position-relative text-white d-flex justify-content-center align-content-center text-center overflow-hidden">
-        <video
+        <!-- <video
           class="video d-block fullscreen w-100 grayscale o-30"
           style="object-fit: cover; min-width: 100%; min-height: 100%; height: 120%; opacity: 1"
           width="1920"
@@ -157,7 +157,7 @@
           autoplay
           muted>
           <source src="https://s3.amazonaws.com/ns.images/newspring/overflowoffering/2023/AikenDroneTest2.mp4" type="video/mp4" />
-        </video>
+        </video> -->
         <div
           class="fullscreen background-cover background-center o-0"
           style="background-image: url('https://dg0ddngxdz549.cloudfront.net/newspring/about/2023/about_hero2_2x1.jpg')"></div>
@@ -166,9 +166,9 @@
           <h1 class="display-3">God has <span class="text-white">proven Himself faithful</span> to us &mdash; year after year.</h1>
           <p>
             We want every NewSpring campus to be a physical place where heaven meets earth, community flourishes, and Jesus is glorified. The Overflow Offering
-            isn't just a yearly event &mdash; it's an opportunity to trust God with an investment to see lives changed in Aiken, SC.
+            isn’t just a yearly event &mdash; it’s an opportunity to trust God with an investment to see lives changed in Aiken, SC.
           </p>
-          <p class="mb-0"><a href="#give" data-scroll class="btn btn-primary bg-blue drop-shadow">Give Now</a></p>
+          <p class="mb-0"><a href="#give" data-scroll class="btn btn-primary bg-blue">Give Now</a></p>
         </div>
       </section>
 
@@ -190,7 +190,7 @@
               <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
                 <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2020</span><br />Bluffton Campus</h3>
                 <p class="mb-0">
-                  We were able to purchase and renovation a facility for NewSpring Bluffton, formerly known as the Hilton Head Campus. They went from meeting on
+                  We were able to purchase and renovate a facility for NewSpring Bluffton, formerly known as the Hilton Head Campus. They went from meeting on
                   Sunday nights at New Life Church to moving into their own permanent home in July 2021!
                 </p>
               </div>
@@ -200,8 +200,8 @@
               <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-6 pl-lg-7 col-start-md-2">
                 <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2021</span><br />Aiken Land</h3>
                 <p class="mb-0">
-                  NewSpring Aiken is rapidly outgrowing their space; what a great problem to have! We needed room to grow. Thanks to our generous church, we
-                  were able to purchase land for Aiken’s permanent facility.
+                  NewSpring Aiken continues to outgrow their space rapidly; what a great problem to have! We needed room to grow. Thanks to our generous church,
+                  we were able to purchase land for Aiken’s permanent facility.
                 </p>
               </div>
             </div>
@@ -210,8 +210,8 @@
               <div class="py-6 py-md-6 pl-5 pl-sm-6 pl-md-0 pr-md-6 pr-lg-7 text-md-right">
                 <h3 class="h5 mb-1 text-blue"><span class="display-3 text-blue-dark">2022</span><br />Eliminate Debt Balance</h3>
                 <p class="mb-0">
-                  In 2017, our leadership team made a decision not to accrue new debt. Within five years, we paid off $37M! In March 2023, we celebrated that
-                  NewSpring Church is officially debt free.
+                  In 2017, our leadership team made a decision not to accrue new debt. Within six years, we paid off $45M! Now that NewSpring Church is
+                  officially debt free, we are free to listen to God’s voice and obey without debt as an obstacle.
                 </p>
               </div>
             </div>
@@ -219,10 +219,11 @@
 
           <div class="text-constrained mx-auto text-center">
             <h3 class="h5 text-blue mb-5"><span class="display-1 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
+            <pre>[[ 3D Video Embed ]]</pre>
             <p>Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!</p>
             <p>
-              <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
-              <a href="#stories" class="btn btn-default" data-scroll>Read the Aiken Story</a>
+              <a href="#stories" class="btn btn-primary bg-blue" data-scroll>Read the Aiken Story</a>
+              <a href="#give" class="btn btn-default mb-2 mb-sm-0" data-scroll>Give Now</a>
             </p>
           </div>
         </div>
@@ -237,12 +238,12 @@
           <p class="pretitle text-white o-70">The Aiken Story</p>
           <h2 class="text-white display-3">We want NewSpring Aiken to point to Jesus — literally.</h2>
           <p>
-            Our buildings should be areas where our community can comfortably gather, worship, and form tight-knit friendships. That’s why we want every
-            NewSpring campus to exist in a permanent home by 2030.
+            Our buildings should be areas where our community can comfortably gather, worship, and form tight-knit friendships. That’s why
+            <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
           </p>
           <p>
             In 2021, because of our church’s radical generosity, we were able to purchase the land for the Aiken Campus facility. This year, the Overflow
-            Offering focuses on breaking ground and development of NewSpring Aiken’s facility. 
+            Offering focuses on breaking ground and development of NewSpring Aiken’s facility.
           </p>
         </div>
 
@@ -322,6 +323,9 @@
             <a href="#storyone" class="text-decoration-none" data-scroll>Sam's</a>, <a href="#storytwo" class="text-decoration-none" data-scroll>Julia's</a>,
             and <a href="#storythree" class="text-decoration-none" data-scroll>Andrea's</a>.
           </h3>
+          <p>
+            <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
+          </p>
         </div>
 
         <!-- STORIES -->
@@ -398,7 +402,14 @@
       <section id="offering" class="bg-white">
         <div class="text-constrained mx-auto text-center">
           <h2 class="display-3 text-blue-dark">What is an offering?</h2>
-          <p>Est aute qui deserunt esse aliqua est id aliquip esse minim excepteur id eu. Lorem voluptate tempor et officia minim tempor veniam adipisicing.</p>
+          <p>
+            You may have heard people say “we bring our tithes and offerings” before. Why say both? What is the difference? The word tithe means “a tenth.” The
+            principle of tithing is found in Scripture even before the law was given by God to the Israelites.
+          </p>
+          <p>
+            We believe the Bible is clear that tithing is a way that believers can show they trust God to provide and are grateful. An offering is anything
+            beyond that 10%. It’s something we give in response to what God has done and is doing.
+          </p>
           <script src="https://fast.wistia.com/embed/medias/skqxx3cwhf.jsonp" async></script>
           <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
           <div class="wistia_responsive_padding my-6 rounded-xl overflow-hidden" data-aos="fade-up" style="padding: 56.25% 0 0 0; position: relative">
@@ -446,10 +457,15 @@
 
       <section id="faqs" class="bg-blue-light">
         <div class="text-constrained mx-auto">
-          <p class="pretitle text-blue">FAQs</p>
-          <h2 class="text-white">Frequently Asked Questions</h2>
+          <p class="pretitle text-blue">Year in Review</p>
+          <h2 class="text-white display-3">Annual Report</h2>
+          <p>
+            Nulla irure aute magna consectetur sit sit. Voluptate in reprehenderit exercitation ut aute officia magna. Exercitation Lorem labore veniam anim
+            mollit consectetur nulla exercitation ut ullamco labore ad amet qui. Commodo eu ea eu minim qui cillum. Nisi pariatur culpa aute do. Eiusmod
+            consectetur ipsum pariatur Lorem ullamco exercitation in irure elit deserunt duis est elit.
+          </p>
 
-          <div id="accordion" class="d-grid grid-cols-1 gap-3">
+          <div id="accordion" class="hidden d-grid grid-cols-1 gap-3">
             <div data-aos="fade-up">
               <div
                 class="d-flex cursor-pointer"
