updated copy on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -455,7 +455,7 @@
         </div>
       </section>
 
-      <section id="faqs" class="bg-blue-light">
+      <section id="faqs" class="bg-blue-light text-center">
         <div class="text-constrained mx-auto">
           <p class="pretitle text-blue">Year in Review</p>
           <h2 class="text-white display-3">Annual Report</h2>
