--- a/overflow.html
+++ b/overflow.html
@@ -428,24 +428,26 @@
 
       <section id="give" class="bg-blue-dark text-white">
         <div class="text-constrained mx-auto text-center">
-          <h2 class="display-3 mb-5">Give Now</h2>
-          <input type="text" class="h3 px-5 p-3 w-100 mb-4 border-0 rounded-full text-gray-darker text-center" placeholder="Enter an amount" />
-          <p><a href="/give/now" class="btn btn-primary bg-blue">Give Now</a></p>
+          <div data-aos="fade-up">
+            <h2 class="display-3 mb-5">Give Now</h2>
+            <input type="text" class="h3 px-5 p-3 w-100 mb-4 border-0 rounded-full text-gray-darker text-center" placeholder="Enter an amount" />
+            <p><a href="/give/now" class="btn btn-primary bg-blue">Give Now</a></p>
+          </div>
 
           <div class="d-grid grid-cols-12 gap-x-5 mt-6 text-left">
-            <div class="col-span-12">
+            <div class="col-span-12" data-aos="fade-up">
               <h3 class="h5 text-blue-light">Total Given</h3>
               <h4 class="display-2">
                 $<span data-purecounter-start="0" data-purecounter-end="338992.81" data-purecounter-decimals="2" class="purecounter"> 0 </span>
               </h4>
             </div>
-            <div class="col-span-6">
+            <div class="col-span-6" data-aos="fade-up">
               <h3 class="h5 text-blue-light">Unique Givers</h3>
               <h4 class="display-3">
                 <span data-purecounter-start="0" data-purecounter-end="225" class="purecounter"> 0 </span>
               </h4>
             </div>
-            <div class="col-span-6">
+            <div class="col-span-6" data-aos="fade-up">
               <h3 class="h5 text-blue-light">Days Left</h3>
               <h4 class="display-3">
                 <span data-purecounter-start="0" data-purecounter-end="121" class="purecounter"> 0 </span>
@@ -455,17 +457,51 @@
         </div>
       </section>
 
-      <section id="faqs" class="bg-blue-light text-center">
-        <div class="text-constrained mx-auto">
-          <p class="pretitle text-blue">Year in Review</p>
-          <h2 class="text-white display-3">Annual Report</h2>
-          <p>
-            Nulla irure aute magna consectetur sit sit. Voluptate in reprehenderit exercitation ut aute officia magna. Exercitation Lorem labore veniam anim
-            mollit consectetur nulla exercitation ut ullamco labore ad amet qui. Commodo eu ea eu minim qui cillum. Nisi pariatur culpa aute do. Eiusmod
-            consectetur ipsum pariatur Lorem ullamco exercitation in irure elit deserunt duis est elit.
-          </p>
-          <p>
-            <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
+      <section id="faqs" class="bg-blue">
+        <div class="page-constrained mx-auto text-center text-sm-left">
+          <div class="text-center mb-7">
+            <p class="pretitle text-blue-light">Year in Review</p>
+            <h2 class="display-2 text-white mb-md-7">Annual Report</h2>
+          </div>
+          <div class="d-grid grid-cols-2 gap-6 mb-5 mb-md-6">
+            <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-3">
+              <h3 class="h2 font-black text-blue-dark">2022 Income</h3>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">General Tithes &amp; Offerings</h4>
+                <p class="h5 tracking-tighter text-white">$00.00m <span class="text-blue-dark">00%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">Overflow Fund</h4>
+                <p class="h5 tracking-tighter text-white">$0.00m <span class="text-blue-dark">0.0%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">The Gauntlet Fund</h4>
+                <p class="h5 tracking-tighter text-white">$0.00m <span class="text-blue-dark">0.0%</span></p>
+              </div>
+            </div>
+            <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-3">
+              <h3 class="h2 font-black text-blue-dark">2022 Expenses</h3>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">Next Generation</h4>
+                <p class="h5 tracking-tighter text-white">$00.00m <span class="text-blue-dark">00%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">Gatherings, Events &amp; Facilities</h4>
+                <p class="h5 tracking-tighter text-white">$0.00m <span class="text-blue-dark">0.0%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">Discipleship, Outreach, &amp; Missions</h4>
+                <p class="h5 tracking-tighter text-white">$0.00m <span class="text-blue-dark">0.0%</span></p>
+              </div>
+              <div data-aos="fade-up">
+                <h4 class="h5 text-blue-light mb-0">Support Operational Expenses</h4>
+                <p class="h5 tracking-tighter text-white">$0.00m <span class="text-blue-dark">0.0%</span></p>
+              </div>
+            </div>
+          </div>
+
+          <p class="text-center">
+            <a href="#give" class="btn btn-primary bg-blue-dark mb-2 mb-sm-0" data-scroll>Give Now</a>
           </p>
 
           <div id="accordion" class="hidden d-grid grid-cols-1 gap-3">
