build annual report layout on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -457,51 +457,51 @@
         </div>
       </section>
 
-      <section id="faqs" class="bg-gray-darker">
+      <section id="faqs" class="bg-white">
         <div class="page-constrained mx-auto text-center text-sm-left">
           <div class="text-center mb-7">
-            <p class="pretitle text-kraft">Year in Review</p>
-            <h2 class="display-2 text-white">Annual Report</h2>
+            <p class="pretitle text-blue">Year in Review</p>
+            <h2 class="display-2">Annual Report</h2>
           </div>
-          <div class="d-grid grid-cols-2 gap-7 mb-7 py-5">
+          <div class="d-grid grid-cols-2 gap-7 mb-7 py-2">
             <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-4">
-              <h3 class="h2 font-black text-white mb-0">2022 Income</h3>
+              <h3 class="h2 font-black mb-0">2022 Income</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">General Tithes &amp; Offerings</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$00.00m <span class="text-gray">00%</span></p>
+                <h4 class="h5 mb-0">General Tithes &amp; Offerings</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$00.00m <span class="text-blue-light">00%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">Overflow Fund</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$0.00m <span class="text-gray">0.0%</span></p>
+                <h4 class="h5 mb-0">Overflow Fund</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$0.00m <span class="text-blue-light">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">The Gauntlet Fund</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$0.00m <span class="text-gray">0.0%</span></p>
+                <h4 class="h5 mb-0">The Gauntlet Fund</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$0.00m <span class="text-blue-light">0.0%</span></p>
               </div>
             </div>
             <div class="col-span-2 col-span-md-1 d-grid grid-cols-1 gap-y-4">
-              <h3 class="h2 font-black text-white mb-0">2022 Expenses</h3>
+              <h3 class="h2 font-black mb-0">2022 Expenses</h3>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">Next Generation</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$00.00m <span class="text-gray">00%</span></p>
+                <h4 class="h5 mb-0">Next Generation</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$00.00m <span class="text-blue-light">00%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">Gatherings, Events &amp; Facilities</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$0.00m <span class="text-gray">0.0%</span></p>
+                <h4 class="h5 mb-0">Gatherings, Events &amp; Facilities</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$0.00m <span class="text-blue-light">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">Discipleship, Outreach, &amp; Missions</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$0.00m <span class="text-gray">0.0%</span></p>
+                <h4 class="h5 mb-0">Discipleship, Outreach, &amp; Missions</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$0.00m <span class="text-blue-light">0.0%</span></p>
               </div>
               <div data-aos="fade-up">
-                <h4 class="h5 text-white mb-0">Support Operational Expenses</h4>
-                <p class="h5 tracking-tighter text-kraft mb-0">$0.00m <span class="text-gray">0.0%</span></p>
+                <h4 class="h5 mb-0">Support Operational Expenses</h4>
+                <p class="h5 text-blue tracking-tighter mb-0">$0.00m <span class="text-blue-light">0.0%</span></p>
               </div>
             </div>
           </div>
 
           <p class="text-center">
-            <a href="#give" class="btn btn-primary bg-kraft mb-2 mb-sm-0" data-scroll>Give Now</a>
+            <a href="#give" class="btn btn-primary bg-blue mb-2 mb-sm-0" data-scroll>Give Now</a>
           </p>
 
           <div id="accordion" class="hidden d-grid grid-cols-1 gap-3">
@@ -587,9 +587,9 @@
         </div>
       </section>
 
-      <section id="questions" class="text-center">
+      <section id="questions" class="bg-blue-light text-center">
         <div class="text-constrained mx-auto">
-          <h2>Still have questions?</h2>
+          <h2 class="text-white">Still have questions?</h2>
           <p>We’d love to answer any questions you might have.</p>
           <p class="mb-0"><a href="/workflows/152" class="btn btn-primary bg-blue">Contact Us</a></p>
         </div>
