changed annual report text alignment for mobile on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -458,7 +458,7 @@
       </section>
 
       <section id="faqs" class="bg-white">
-        <div class="page-constrained mx-auto text-center text-sm-left">
+        <div class="page-constrained mx-auto">
           <div class="text-center mb-7">
             <p class="pretitle text-blue">Year in Review</p>
             <h2 class="display-2">Annual Report</h2>
