--- a/overflow.html
+++ b/overflow.html
@@ -216,27 +216,31 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="text-constrained mx-auto text-center">
+        <div class="pt-7 position-relative text-center">
+          <div class="text-constrained mx-auto px-6 bring-forward">
             <h3 class="h5 text-blue mb-5"><span class="display-1 text-blue-dark">2023</span><br />Build Aiken Campus</h3>
             <pre>[[ 3D Video Embed ]]</pre>
             <p>Because of your generosity, we were able to purchase the land for the new Aiken Campus in 2021. But Aiken's story isn't done yet!</p>
-            <p>
-              <a href="#stories" class="btn btn-primary bg-blue" data-scroll>Read the Aiken Story</a>
-              <a href="#give" class="btn btn-default mb-2 mb-sm-0" data-scroll>Give Now</a>
+            <p class="mb-0">
+              <a href="#give" class="btn btn-primary bg-blue" data-scroll>Give Now</a>
             </p>
           </div>
+          <div
+            class="fullscreen o-100"
+            style="background: rgb(20, 20, 20); background: linear-gradient(0deg, var(--overflow-blue-light) 0%, transparent 80%); top: -250px"></div>
         </div>
 
         <div
-          class="ratio-video ratio-sm-landscape ratio-lg-thin bg-white background-cover background-top mt-6 mt-md-8"
+          class="hidden ratio-video ratio-sm-landscape ratio-lg-thin bg-white background-cover background-top mt-6 mt-md-8"
           style="background-image: url('./Themes/new/Assets/Images/overflow_aikenariel_2x1.jpg')"></div>
       </section>
 
-      <section id="stories" class="bg-blue-light text-blue-dark px-0 overflow-hidden">
+      <section id="stories" class="bg-blue-light px-0 overflow-hidden">
         <div class="px-5 text-constrained mx-auto text-center mb-6">
           <p class="pretitle text-white o-70">The Aiken Story</p>
-          <h2 class="text-white display-3">We want NewSpring Aiken to point to Jesus — literally.</h2>
+          <h2 class="text-white display-3">We want NewSpring Aiken to <span class="text-blue">point to Jesus</span> — literally.</h2>
           <p>
             Our buildings should be areas where our community can comfortably gather, worship, and form tight-knit friendships. That’s why
             <a href="/2030.html">we want every NewSpring campus to exist in a permanent home by 2030.</a>
