fixed give input width on mobile on overflow page

--- a/overflow.html
+++ b/overflow.html
@@ -469,7 +469,7 @@
         <div class="text-constrained mx-auto text-center">
           <div data-aos="fade-up">
             <h2 class="display-3 mb-5">Give Now</h2>
-            <input type="text" class="h4 px-5 p-3 w-75 mb-5 border-0 rounded-full text-gray-darker text-center" placeholder="Enter an amount" />
+            <input type="text" class="h4 px-5 p-3 w-100 w-sm-75 mb-5 border-0 rounded-full text-gray-darker text-center" placeholder="Enter an amount" />
             <p><a href="/give/now" class="btn btn-primary bg-blue-dark">Give Now</a></p>
           </div>
 
